# backend_thirdeye

./: .dockerignore  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
.github/workflows/: delete-workflows.yml  formatting.yml  tests.yml
backend_thirdeye-main/thirdeye/: .env  db_backup.sqlite3  requirements.txt
backend_thirdeye-main/thirdeye/authentication/: renderers.py  serializers.py  urls.py  views.py
backend_thirdeye-main/thirdeye/camera/: admin.py  consumers.py  face_recognition_module.py  models.py  pagination.py  routing.py  serializers.py  urls.py  views.py
backend_thirdeye-main/thirdeye/thirdeye/: asgi.py  settings.py  urls.py  wsgi.py
deploy/: docker-compose.dev.yml  docker-compose.yaml
thirdeye/: .env  db.sqlite3  manage.py  requirements.txt
thirdeye/authentication/: backends.py  models.py  serializers.py  utils.py  views.py
thirdeye/authentication/migrations/: 0001_initial.py
thirdeye/camera/: admin.py  consumers.py  face_recognition_module.py  models.py  pagination.py  routing.py  serializers.py  urls.py  views.py
thirdeye/camera/migrations/: 0001_initial.py  0002_face.py  0003_face_updated_at.py  0004_camerastream_created_at_ddnscamera_name_and_more.py  0005_face_image_alter_face_embedding.py  (+2 more)
thirdeye/thirdeye/: asgi.py  settings.py  urls.py
thirdeye_backend/: settings.py
thirdeye_backend/core/: __init__.py
thirdeye_backend/migrations/: env.py
thirdeye_backend/models/: __init__.py  base.py
thirdeye_backend/web/: application.py
(+7 files in other folders)
